--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-	"name": "backstage",
-	"devDependencies": {
-		"del": "*",
-		"es6-promise": "*",
-		"gulp": "^4.0.2",
-		"gulp-exec": "^3.0.2",
-		"gulp-load-plugins": "^2.0.0",
-		"gulp-replace": "^1.0.0",
-		"gulp-rsync": "^0.0.8"
-	}
+  "name": "backstage",
+  "devDependencies": {
+    "del": "*",
+    "es6-promise": "*",
+    "gulp": "^4.0.2",
+    "gulp-exec": "^3.0.2",
+    "gulp-load-plugins": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-rsync": "^0.0.8",
+    "command-exists": "^1.2.8",
+    "gulp-util": "^3.0.8"
+  }
 }
